--- a/nltk.ipynb
+++ b/nltk.ipynb
@@ -1179,44 +1179,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'ProjectiveDependencyParser' object has no attribute 'productions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-b5335815201c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProjectiveDependencyParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrammar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtrees\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproductions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ProjectiveDependencyParser' object has no attribute 'productions'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "parser = nltk.ProjectiveDependencyParser(grammar)\n",
     "trees = parser.parse(sent)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logic\n",
+    "\n",
+    "prover9\n",
+    "\n",
+    "[Howto](http://www.nltk.org/howto/logic.html)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'ProjectiveDependencyParser' object has no attribute 'productions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-aeee3defa569>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproductions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ProjectiveDependencyParser' object has no attribute 'productions'"
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pq = nltk.sem.Expression.fromstring('P -> Q')\n",
+    "p = nltk.sem.Expression.fromstring('P')\n",
+    "q = nltk.sem.Expression.fromstring('Q')\n",
+    "prover = nltk.Prover9()\n",
+    "prover.prove(q, [pq, p])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model semantics\n",
+    "\n",
+    "Model = Domain + Valuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val = nltk.Valuation((('P', True), ('Q', True)))\n",
+    "val['P']\n",
+    "dom = set()\n",
+    "g = nltk.Assignment(dom)\n",
+    "m = nltk.Model(dom, val)\n",
+    "m.evaluate('P & Q', g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicate Logic\n",
+    "\n",
+    "- type\n",
+    "- lambda expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = nltk.sem.Expression.fromstring('bullshit(leader)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "?\n",
+      "<e,t>\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "tlp = nltk.sem.logic.LogicParser(True)\n",
+    "print(tlp.parse('man(x)').type)\n",
+    "\n",
+    "sig = {'man': '<e, t>'}\n",
+    "e = tlp.parse('man(x)', sig)\n",
+    "print(e.function.type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model semantics\n",
+    "\n",
+    "Model = Domain + Valution + Assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.sem import Valuation, Model\n",
+    "\n",
+    "val=Valuation([('leader', 'l'),('bullshit', {'l'})])\n",
+    "dom = val.domain\n",
+    "m = Model(dom, val)\n",
+    "m.evaluate('bullshit(leader)', {})\n",
+    "\n",
+    "dom = val.domain\n",
+    "g = nltk.sem.Assignment(dom, [('x', 'l')])\n",
+    "\n",
+    "m.evaluate('bullshit(x)', g)"
+   ]
   },
   {
    "cell_type": "code",
