--- a/nltk.ipynb
+++ b/nltk.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,77 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-86b043abd561>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# rtepair = nltk.corpus.rte.pairs(['rte3_dev.xml'])[33]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mrtepair\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'I am a Person'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'I love you'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mextractor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRTEFeatureExtractor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrtepair\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mrte_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrtepair\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/nltk/classify/rte_classify.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, rtepair, stop, use_lemmatize)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;31m# Get the set of word types for text and hypothesis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrtepair\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhyp_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrtepair\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhyp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext_tokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# rtepair = nltk.corpus.rte.pairs(['rte3_dev.xml'])[33]\n",
-    "rtepair = ('I am a Person', 'I love you')\n",
-    "extractor = nltk.RTEFeatureExtractor(rtepair)\n",
-    "rte_features(rtepair)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class RTEFeatureExtractor in module nltk.classify.rte_classify:\n",
-      "\n",
-      "class RTEFeatureExtractor(builtins.object)\n",
-      " |  This builds a bag of words for both the text and the hypothesis after\n",
-      " |  throwing away some stopwords, then calculates overlap and difference.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, rtepair, stop=True, use_lemmatize=False)\n",
-      " |      :param rtepair: a ``RTEPair`` from which features should be extracted\n",
-      " |      :param stop: if ``True``, stopwords are thrown away.\n",
-      " |      :type stop: bool\n",
-      " |  \n",
-      " |  hyp_extra(self, toktype, debug=True)\n",
-      " |      Compute the extraneous material in the hypothesis.\n",
-      " |      \n",
-      " |      :param toktype: distinguish Named Entities from ordinary words\n",
-      " |      :type toktype: 'ne' or 'word'\n",
-      " |  \n",
-      " |  overlap(self, toktype, debug=False)\n",
-      " |      Compute the overlap between text and hypothesis.\n",
-      " |      \n",
-      " |      :param toktype: distinguish Named Entities from ordinary words\n",
-      " |      :type toktype: 'ne' or 'word'\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(nltk.RTEFeatureExtractor)"
+    "# rtepair = nltk.corpus.rte.pairs('I am a Person', 'I love you')\n",
+    "# extractor = nltk.classify.rte_classify.RTEFeatureExtractor(rtepair)\n",
+    "# rte_features(rtepair)"
    ]
   },
   {
@@ -1233,6 +1170,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.sem import Valuation, Model, Expression"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -1258,7 +1204,7 @@
     }
    ],
    "source": [
-    "val = nltk.Valuation((('P', True), ('Q', True)))\n",
+    "val = Valuation((('P', True), ('Q', True)))\n",
     "val['P']\n",
     "dom = set()\n",
     "g = nltk.Assignment(dom)\n",
@@ -1272,17 +1218,31 @@
    "source": [
     "## Predicate Logic\n",
     "\n",
+    "- expression\n",
     "- type\n",
     "- lambda expression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<LambdaExpression \\x.bullshit(x)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "b = nltk.sem.Expression.fromstring('bullshit(leader)')"
+    "b = nltk.sem.Expression.fromstring('bullshit(leader)')\n",
+    "bx = nltk.sem.Expression.fromstring(r'\\x.bullshit(x)')\n",
+    "bx"
    ]
   },
   {
@@ -1319,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1288,7 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1338,13 +1298,22 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'l'}"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from nltk.sem import Valuation, Model\n",
     "\n",
     "val=Valuation([('leader', 'l'),('bullshit', {'l'})])\n",
     "dom = val.domain\n",
@@ -1354,7 +1323,105 @@
     "dom = val.domain\n",
     "g = nltk.sem.Assignment(dom, [('x', 'l')])\n",
     "\n",
-    "m.evaluate('bullshit(x)', g)"
+    "m.evaluate('bullshit(x)', g)\n",
+    "\n",
+    "g = nltk.sem.Assignment(dom, [])\n",
+    "b = Expression.fromstring('bullshit(x)')\n",
+    "m.satisfiers(b, 'x', g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build a model satifying the formulas\n",
+    "\n",
+    "- Mace: find a model\n",
+    "- MaceCommand: find a conterexample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Expression.fromstring('exists x.(man(x) & walks(x))')\n",
+    "c1 = Expression.fromstring('mortal(socrates)')\n",
+    "c2 = Expression.fromstring('all x. (man(x) -> mortal(x))')\n",
+    "c3 = Expression.fromstring('man(socrates)')\n",
+    "c4 = Expression.fromstring('-mortal(socrates)')\n",
+    "mb = nltk.Mace(5)\n",
+    "mb.build_model(None, [c1, c2])\n",
+    "mb.build_model(None, [c3, c2, c4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Expression.fromstring('all x. (man(x) -> love(x, lucy) | love(x, mary))')\n",
+    "b = Expression.fromstring('man(bob)')\n",
+    "c = Expression.fromstring('man(carl)')\n",
+    "d = Expression.fromstring('love(carl, mary)')\n",
+    "mc = nltk.MaceCommand(d, assumptions=[a, b, c])\n",
+    "mc.build_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bob': 'a',\n",
+      " 'carl': 'a',\n",
+      " 'love': {('a', 'a')},\n",
+      " 'lucy': 'a',\n",
+      " 'man': {('a',)},\n",
+      " 'mary': 'b'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mc.valuation)"
    ]
   },
   {
