--- a/nltk.ipynb
+++ b/nltk.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,8 +829,10 @@
     "# result = cp.parse(tags)\n",
     "# print(result)\n",
     "\n",
-    "grammar = r\"\"\"NP: {<DT>?<JJ>*<NN>}\n",
-    "{<NNP>+}\"\"\"  # NP - chunking\n",
+    "grammar = r\"\"\"\n",
+    "NP: {<DT>?<JJ>*<NN>}\n",
+    "{<NNP>+}\n",
+    "\"\"\"  # NP - chunking\n",
     "cp = nltk.RegexpParser(grammar)\n",
     "result = cp.parse(tags)  # grammar tree\n",
     "print(result)\n"
@@ -862,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CoNLL2000 Chunking"
+    "## CoNLL2000 Chunking"
    ]
   },
   {
@@ -907,7 +909,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grammar Analysis"
+    "## Grammar Analysis"
    ]
   },
   {
@@ -1128,11 +1130,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Feature Syntax\n",
+    "\n",
+    "## AVM\n",
+    "\n",
+    "$\\left[\\begin{align} POS & N &\\\\\n",
+    " &  PER & 3 \\\\\n",
+    "ARG    & NUM & pl \\\\\n",
+    "    & GND & fem \n",
+    "    \\end{align}\\right]$\n",
+    "\n",
+    "## Feature Struct\n",
+    "\n",
+    "```python\n",
+    "fs0 = FeatStruct(PER=3, NUM='pl', GND='fem')\n",
+    "fs = FeatStruct(POS='N', ARG=fs0)\n",
+    "FeatStruct(\"[POS='N', AGR=[PER=3, NUM='pl', GND='fem']]\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% start S\n",
+      "# ###################\n",
+      "# Grammar Productions\n",
+      "# ###################\n",
+      "# S expansion productions\n",
+      "S -> NP[NUM=?n] VP[NUM=?n]\n",
+      "# NP expansion productions\n",
+      "NP[NUM=?n] -> N[NUM=?n] \n",
+      "NP[NUM=?n] -> PropN[NUM=?n] \n",
+      "NP[NUM=?n] -> Det[NUM=?n] N[NUM=?n]\n",
+      "NP[NUM=pl] -> N[NUM=pl] \n",
+      "# VP expansion productions\n",
+      "VP[TENSE=?t, NUM=?n] -> IV[TENSE=?t, NUM=?n]\n",
+      "VP[TENSE=?t, NUM=?n] -> TV[TENSE=?t, NUM=?n] NP\n",
+      "# ###################\n",
+      "# Lexical Productions\n",
+      "# ###################\n",
+      "Det[NUM=sg] -> 'this' | 'every'\n",
+      "Det[NUM=pl] -> 'these' | 'all'\n",
+      "Det -> 'the' | 'some' | 'several'\n",
+      "PropN[NUM=sg]-> 'Kim' | 'Jody'\n",
+      "N[NUM=sg] -> 'dog' | 'girl' | 'car' | 'child'\n",
+      "N[NUM=pl] -> 'dogs' | 'girls' | 'cars' | 'children' \n",
+      "IV[TENSE=pres,  NUM=sg] -> 'disappears' | 'walks'\n",
+      "TV[TENSE=pres, NUM=sg] -> 'sees' | 'likes'\n",
+      "IV[TENSE=pres,  NUM=pl] -> 'disappear' | 'walk'\n",
+      "TV[TENSE=pres, NUM=pl] -> 'see' | 'like'\n",
+      "IV[TENSE=past] -> 'disappeared' | 'walked'\n",
+      "TV[TENSE=past] -> 'saw' | 'liked'\n",
+      "|.Kim .like.chil.|\n",
+      "Leaf Init Rule:\n",
+      "|[----]    .    .| [0:1] 'Kim'\n",
+      "|.    [----]    .| [1:2] 'likes'\n",
+      "|.    .    [----]| [2:3] 'children'\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|[----]    .    .| [0:1] PropN[NUM='sg'] -> 'Kim' *\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|[----]    .    .| [0:1] NP[NUM='sg'] -> PropN[NUM='sg'] *\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|[---->    .    .| [0:1] S[] -> NP[NUM=?n] * VP[NUM=?n] {?n: 'sg'}\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|.    [----]    .| [1:2] TV[NUM='sg', TENSE='pres'] -> 'likes' *\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|.    [---->    .| [1:2] VP[NUM=?n, TENSE=?t] -> TV[NUM=?n, TENSE=?t] * NP[] {?n: 'sg', ?t: 'pres'}\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|.    .    [----]| [2:3] N[NUM='pl'] -> 'children' *\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|.    .    [----]| [2:3] NP[NUM='pl'] -> N[NUM='pl'] *\n",
+      "Feature Bottom Up Predict Combine Rule:\n",
+      "|.    .    [---->| [2:3] S[] -> NP[NUM=?n] * VP[NUM=?n] {?n: 'pl'}\n",
+      "Feature Single Edge Fundamental Rule:\n",
+      "|.    [---------]| [1:3] VP[NUM='sg', TENSE='pres'] -> TV[NUM='sg', TENSE='pres'] NP[] *\n",
+      "Feature Single Edge Fundamental Rule:\n",
+      "|[==============]| [0:3] S[] -> NP[NUM='sg'] VP[NUM='sg'] *\n",
+      "(S[]\n",
+      "  (NP[NUM='sg'] (PropN[NUM='sg'] Kim))\n",
+      "  (VP[NUM='sg', TENSE='pres']\n",
+      "    (TV[NUM='sg', TENSE='pres'] likes)\n",
+      "    (NP[NUM='pl'] (N[NUM='pl'] children))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.data.show_cfg('grammars/book_grammars/feat0.fcfg')\n",
+    "cp=nltk.load_parser('grammars/book_grammars/feat0.fcfg', trace=2)\n",
+    "trees = cp.parse('Kim likes children'.split())\n",
+    "\n",
+    "for tree in trees:\n",
+    "    print(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Logic\n",
     "\n",
     "prover9\n",
     "\n",
     "[Howto](http://www.nltk.org/howto/logic.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.sem import Valuation, Model, Expression"
    ]
   },
   {
@@ -1152,9 +1273,9 @@
     }
    ],
    "source": [
-    "pq = nltk.sem.Expression.fromstring('P -> Q')\n",
-    "p = nltk.sem.Expression.fromstring('P')\n",
-    "q = nltk.sem.Expression.fromstring('Q')\n",
+    "pq = Expression.fromstring('P -> Q')\n",
+    "p = Expression.fromstring('P')\n",
+    "q = Expression.fromstring('Q')\n",
     "prover = nltk.Prover9()\n",
     "prover.prove(q, [pq, p])"
    ]
@@ -1166,15 +1287,6 @@
     "## Model semantics\n",
     "\n",
     "Model = Domain + Valuation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.sem import Valuation, Model, Expression"
    ]
   },
   {
@@ -1425,11 +1537,168 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## lambda calculus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\\X x.X(\\y.chase(x,y)))(\\P.exists x.(dog(x) & P(x)))\n",
+      "\\x.exists z11.(dog(z11) & chase(x,z11))\n",
+      "\\Z x.Z(\\y.chase(x,y))\n",
+      "(\\X x.X(\\y.chase(x,y)))(\\P.exists x.(dog(x) & P(x)))\n",
+      "\\x.exists z12.(dog(z12) & chase(x,z12))\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "tvp=Expression.fromstring('\\X x. X(\\y.chase(x, y))')\n",
+    "np=Expression.fromstring('\\P.exists x.(dog(x) & P(x))')\n",
+    "vp=nltk.ApplicationExpression(tvp, np)\n",
+    "print(vp)\n",
+    "print(vp.simplify())  # beta-convert\n",
+    "print(tvp.alpha_convert(nltk.Variable('Z')))\n",
+    "\n",
+    "vp1=Expression.fromstring('(\\X x. X(\\y.chase(x, y)))(\\P.exists x.(dog(x) & P(x)))')\n",
+    "print(vp1)\n",
+    "print(vp1.simplify())  # beta-convert\n",
+    "print(vp1==vp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ *type* = 'S'                                    ]\n",
+      "[ SEM    = <all z20.(boy(z20) -> see(cyril,z20))> ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "grammar_file = 'grammars/book_grammars/simple-sem.fcfg'\n",
+    "parser = nltk.load_parser(grammar_file, trace=0)\n",
+    "s = 'Cyril sees every boy'\n",
+    "t = s.split()\n",
+    "trees = parser.parse(t)\n",
+    "for tree in trees:\n",
+    "    print(tree.label())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(S[SEM=<all z22.(boy(z22) -> see(cyril,z22))>]\n",
+      "  (NP[-LOC, NUM='sg', SEM=<\\P.P(cyril)>]\n",
+      "    (PropN[-LOC, NUM='sg', SEM=<\\P.P(cyril)>] Cyril))\n",
+      "  (VP[NUM='sg', SEM=<\\x.all z22.(boy(z22) -> see(x,z22))>]\n",
+      "    (TV[NUM='sg', SEM=<\\X x.X(\\y.see(x,y))>, TNS='pres'] sees)\n",
+      "    (NP[NUM='sg', SEM=<\\Q.all x.(boy(x) -> Q(x))>]\n",
+      "      (Det[NUM='sg', SEM=<\\P Q.all x.(P(x) -> Q(x))>] every)\n",
+      "      (Nom[NUM='sg', SEM=<\\x.boy(x)>]\n",
+      "        (N[NUM='sg', SEM=<\\x.boy(x)>] boy)))))\n",
+      "all z22.(boy(z22) -> see(cyril,z22)) False\n"
+     ]
+    }
+   ],
+   "source": [
+    "val=Valuation([('cyril', 'c'),('bertie', 'b'), ('boy', {'b'}), ('see', {('m', 'b')})])\n",
+    "dom = val.domain\n",
+    "m = Model(dom, val)\n",
+    "g = nltk.sem.Assignment(dom)\n",
+    "res = nltk.sem.evaluate_sents([s], grammar_file, m, g)[0]\n",
+    "for syn, sem, val in res:\n",
+    "    print(syn)\n",
+    "    print(sem, val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cooper Storage\n",
+    "\n",
+    "- bind operator\n",
+    "- S-index\n",
+    "\n",
+    "```\n",
+    "Every girl chases a dog.\n",
+    "core: chase(x,y)\n",
+    "bind: \\P. exists y. (dog(y) & P(y)) (\\z2. chase(z1, z2))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[CORE=<chase(z2,z3)>, STORE=(bo(\\P.all x.(girl(x) -> P(x)),z2), bo(\\P.exists x.(dog(x) & P(x)),z3))]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chase(z2,z3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.sem import cooper_storage\n",
+    "s = 'every girl chases a dog'\n",
+    "t = cooper_storage.parse_with_bindops(s, grammar='grammars/book_grammars/storage.fcfg')\n",
+    "semrep = t[0].label()['SEM']\n",
+    "semrep\n",
+    "cs_semrep = cs.CooperStore(semrep)\n",
+    "print(cs_semrep.core)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bo(\\P.all x.(girl(x) -> P(x)),z2)\n",
+      "bo(\\P.exists x.(dog(x) & P(x)),z3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for bo in cs_semrep.store:\n",
+    "    print(bo)  # bind operator"
+   ]
   }
  ],
  "metadata": {
