--- a/nltk.ipynb
+++ b/nltk.ipynb
@@ -15,49 +15,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pathlib\n",
+    "\n",
     "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/william/nltk_data',\n",
+       " '/Library/Frameworks/Python.framework/Versions/3.6/nltk_data',\n",
+       " '/Library/Frameworks/Python.framework/Versions/3.6/share/nltk_data',\n",
+       " '/Library/Frameworks/Python.framework/Versions/3.6/lib/nltk_data',\n",
+       " '/usr/share/nltk_data',\n",
+       " '/usr/local/share/nltk_data',\n",
+       " '/usr/lib/nltk_data',\n",
+       " '/usr/local/lib/nltk_data']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.data.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Statistics of NL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['in', 'one', 'dimension,', 'for', '$1', '<']\n",
-      "['in', '$L^p$~norm', 'to', '$f$;', 'however,', 'the']\n",
-      "['in', 'applications', 'almost', 'always', 'rely', 'on']\n",
-      "['in', '$P_J', 'f$', 'converges', 'absolutely', 'since']\n",
-      "['in', 'the', 'next', 'section', '(though', 'for']\n",
-      "['in', '[3].', 'The', 'non-linear', 'hard', 'and']\n",
-      "['in', 'applications', '(see', '[1],[2])', 'but', 'this']\n",
-      "['in', 'an', 'arbitrary', 'order,', 'and', '(with']\n",
-      "['in', 'this', 'paper', 'originated', 'from', 'a']\n",
-      "['in', 'magnitude', 'by', 'the', 'maximal', 'function.']\n",
-      "['in', '[5].', 'Let', '$f$', 'be', 'an']\n",
-      "['in', '$L^p(\\\\R)$.', 'We', 'first', 'show', 'that']\n",
-      "['in', 'an', '$L^p$', 'class', 'for', 'some']\n",
-      "['in', '$C^\\\\infty_0(\\\\R)$', 'for', 'which', '$|M(f-g)(x)|', '\\\\leq']\n",
-      "['in', 'the', 'expansion', 'of', '$h$,', 'and']\n",
-      "['in', '[3]', 'under', 'weaker', 'decay', 'hypotheses']\n",
-      "['in', 'a', 'distributional', 'sense', 'to', '$\\\\delta(x-y)$.']\n",
-      "['in', 'an', '$L^p$', 'class', 'for', 'some']\n",
-      "['in', 'the', 'summation', 'for', '$T_\\\\lambda', 'f(x)$']\n",
-      "['in', 'the', 'above', 'argument;', 'we', 'omit']\n",
-      "['in', '[3].', '{\\\\heading', '2.', 'Proof', 'of']\n",
-      "['in', 'the', 'proof', 'of', 'Theorem', '1,']\n",
-      "['in', 'the', 'previous', 'section', 'to', 'bound']\n",
-      "['in', '[3].', 'Now', 'suppose', 'that', '$\\\\alpha']\n",
-      "['in', '$L^p([0,1))$', 'for', 'every', '$1', '<']\n",
-      "['in', '(b).', 'We', 'shall', 'define', '$f_N$']\n",
-      "['in', 'the', 'sum', 'defining', '$f_N(x)$', 'are']\n"
+      "('in', 'one', 'dimension,', 'for', '$1')\n",
+      "('in', '$L^p$~norm', 'to', '$f$;', 'however,')\n",
+      "('in', 'applications', 'almost', 'always', 'rely')\n",
+      "('in', '$P_J', 'f$', 'converges', 'absolutely')\n",
+      "('in', 'the', 'next', 'section', '(though')\n",
+      "('in', '[3].', 'The', 'non-linear', 'hard')\n",
+      "('in', 'applications', '(see', '[1],[2])', 'but')\n",
+      "('in', 'an', 'arbitrary', 'order,', 'and')\n",
+      "('in', 'this', 'paper', 'originated', 'from')\n",
+      "('in', 'magnitude', 'by', 'the', 'maximal')\n",
+      "('in', '[5].', 'Let', '$f$', 'be')\n",
+      "('in', '$L^p(\\\\R)$.', 'We', 'first', 'show')\n",
+      "('in', 'an', '$L^p$', 'class', 'for')\n",
+      "('in', '$C^\\\\infty_0(\\\\R)$', 'for', 'which', '$|M(f-g)(x)|')\n",
+      "('in', 'the', 'expansion', 'of', '$h$,')\n",
+      "('in', '[3]', 'under', 'weaker', 'decay')\n",
+      "('in', 'a', 'distributional', 'sense', 'to')\n",
+      "('in', 'an', '$L^p$', 'class', 'for')\n",
+      "('in', 'the', 'summation', 'for', '$T_\\\\lambda')\n",
+      "('in', 'the', 'above', 'argument;', 'we')\n",
+      "('in', '[3].', '{\\\\heading', '2.', 'Proof')\n",
+      "('in', 'the', 'proof', 'of', 'Theorem')\n",
+      "('in', 'the', 'previous', 'section', 'to')\n",
+      "('in', '[3].', 'Now', 'suppose', 'that')\n",
+      "('in', '$L^p([0,1))$', 'for', 'every', '$1')\n",
+      "('in', '(b).', 'We', 'shall', 'define')\n",
+      "('in', 'the', 'sum', 'defining', '$f_N(x)$')\n"
      ]
     }
    ],
@@ -72,24 +110,17 @@
     "    with open(file) as fo:\n",
     "        return nltk.FreqDist(hook(fo.read()))\n",
     "\n",
-    "corpus_root = '/Users/william/Folders/mycorpus/'\n",
+    "corpus_root = pathlib.Path('~/Folders/mycorpus/').expanduser()\n",
     "\n",
     "def follow(s, w, n=1):\n",
     "    # print w and words following it in s\n",
     "    # example: ['in', 'one', 'dimension,', 'for', '$1', '<']\n",
-    "    k = 0\n",
-    "    while k < len(s):\n",
-    "        a = s[k]\n",
-    "        if a == w:\n",
-    "            print(s[k:k+n+1])\n",
-    "            k += n\n",
-    "        else:\n",
-    "            k += 1\n",
+    "    for seq in nltk.ngrams(s, n):\n",
+    "        if seq[0] == w:\n",
+    "            print(seq)\n",
     "            \n",
-    "f = corpus_root + 'wavelets.tex'\n",
-    "with open(f) as fo:\n",
-    "    s = fo.read()\n",
-    "s = s.split()\n",
+    "f = corpus_root / 'wavelets.tex'\n",
+    "s = f.read_text().split()\n",
     "follow(s, 'in', 5)"
    ]
   },
@@ -421,32 +452,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "FreqDist({'分': 71, '，': 68, '学': 66, '\\n': 62, '工': 61, '1': 57, '2': 55, '。': 53, '的': 51, '江': 47, ...})"
+       "FreqDist({'，': 68, '\\n': 62, '。': 53, '的': 51, '申购': 36, '、': 35, '学院': 34, '分': 34, '之江': 31, '（': 25, ...})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import docx\n",
+    "# import docx\n",
     "#docx.Document(corpus_root+'zjc.doc')\n",
-    "import codecs\n",
     "\n",
-    "f = corpus_root+'zjjy.txt'\n",
-    "with open(f, encoding='gb2312') as fo:\n",
-    "    s = fo.read()\n",
+    "f = corpus_root / 'zjjy.txt'\n",
+    "s = f.read_text(encoding='gb2312')\n",
     "# bg = nltk.bigrams([w for w in s.split() if w.isalpha()])\n",
     "# cfd = nltk.ConditionalFreqDist([(a, b) for a, b in bg])\n",
-    "\n",
-    "fd = nltk.FreqDist(s)\n"
+    "import jieba\n",
+    "s = jieba.cut(s, False)\n",
+    "fd = nltk.FreqDist(s)\n",
+    "fd"
    ]
   },
   {
@@ -460,11 +491,9 @@
     "# wl.fileids()\n",
     "\n",
     "# Conditional Distribution\n",
-    "import pathlib\n",
-    "corpus_root = pathlib.Path('/Users/William/Folders/mycorpus')\n",
+    "\n",
     "f = corpus_root / 'wavelets.tex'\n",
-    "with open(f) as fo:\n",
-    "    s = fo.read()\n",
+    "s = f.read_text()\n",
     "bg = nltk.bigrams([w for w in s.split() if w.isalpha()])\n",
     "cfd = nltk.ConditionalFreqDist([(a, b) for a, b in bg])\n",
     "# cfd.tabulate()\n"
@@ -474,32 +503,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wordnet"
+    "# wordnet\n",
+    "\n",
+    "lemmatize: loves -> love"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nltk' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1f0a5eeb9b8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'wordnet'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mwnl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWordNetLemmatizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Lily loves flowers'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mwnl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlemmatize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtokens\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nltk' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['Lily', 'love', 'flower', 'such', 'a', 'lily']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'happiness'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nltk.download('wordnet')\n",
     "wnl = nltk.WordNetLemmatizer()\n",
-    "raw = 'Lily loves flowers'\n",
+    "raw = 'Lily loves flowers such as lilies'\n",
     "tokens = nltk.word_tokenize(raw)\n",
-    "[wnl.lemmatize(t) for t in tokens]"
+    "[wnl.lemmatize(t) for t in tokens]\n",
+    "wnl.lemmatize('happiness')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'work'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'happy'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.stem import *\n",
+    "stemmer = LancasterStemmer()\n",
+    "stemmer.stem('working')\n",
+    "stemmer.stem('happiness')"
    ]
   },
   {
@@ -742,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +824,17 @@
        "0.8112781244591328"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,27 +849,23 @@
     "    return scipy.stats.entropy(ps, base=2)\n",
     "\n",
     "xs = ['male', 'female', 'male', 'male']\n",
-    "entropy(xs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scipy.stats.entropy([2,2], base=2)"
+    "entropy(xs)\n",
+    "\n",
+    "def Dkl(xs, ys):\n",
+    "    # Kullback–Leibler divergence\n",
+    "    fdx = nltk.FreqDist(xs)\n",
+    "    fdy = nltk.FreqDist(ys)\n",
+    "    for x, p in fdx.items():\n",
+    "        if x not in fdy:\n",
+    "            fdy[x] = 0\n",
+    "    for y, p in fdy.items():\n",
+    "        if y not in fdx:\n",
+    "            fdy[y] = 0\n",
+    "    ps = [p for x, p in fdx.items()]\n",
+    "    qs = [p for x, p in fdy.items()]\n",
+    "    return scipy.stats.entropy(ps, qs, base=2)\n",
+    "\n",
+    "Dkl(xs, xs)"
    ]
   },
   {
@@ -1134,11 +1213,13 @@
     "\n",
     "## AVM\n",
     "\n",
-    "$\\left[\\begin{align} POS & N &\\\\\n",
-    " &  PER & 3 \\\\\n",
-    "ARG    & NUM & pl \\\\\n",
-    "    & GND & fem \n",
-    "    \\end{align}\\right]$\n",
+    "$\\left[\\begin{align} POS & N & \\\\\n",
+    " & PER & 3 \\\\\n",
+    "ARG & NUM & pl \\\\\n",
+    " & GND & fem \\\\\n",
+    " \\end{align}\\right]\n",
+    "$\n",
+    "\n",
     "\n",
     "## Feature Struct\n",
     "\n",
@@ -1146,7 +1227,20 @@
     "fs0 = FeatStruct(PER=3, NUM='pl', GND='fem')\n",
     "fs = FeatStruct(POS='N', ARG=fs0)\n",
     "FeatStruct(\"[POS='N', AGR=[PER=3, NUM='pl', GND='fem']]\")\n",
-    "```"
+    "```\n",
+    "\n",
+    "## Extension\n",
+    "- GPSG, Generalized Phrase Structure Grammar\n",
+    "  `V[SUBCAT=iv] == IV, V[SUBCAT=tv] == TV`\n",
+    "- PATR\n",
+    "- HPSG, Head-driven ...\n",
+    "  `V[SUBCAT=<NP>] -> V[SUBCAT=<NP, NP, PP>] NP PP`\n",
+    "- X-bar,\n",
+    "  `N[BAR=1] == N'`\n",
+    "- inverse\n",
+    "  `S[+INV] -> V[+AUX] NP VP`\n",
+    "- dependency\n",
+    "  `S->NP[+WH] S[+INV]/NP, S[+INV, SLASH=NP]`"
    ]
   },
   {
@@ -1230,11 +1324,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chinese"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nltk.corpus.sinica_treebank.parsed_sents()[3452].draw()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1249,11 +1352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.sem import Valuation, Model, Expression"
+    "from nltk.sem import *"
    ]
   },
   {
@@ -1672,7 +1775,6 @@
     }
    ],
    "source": [
-    "from nltk.sem import cooper_storage\n",
     "s = 'every girl chases a dog'\n",
     "t = cooper_storage.parse_with_bindops(s, grammar='grammars/book_grammars/storage.fcfg')\n",
     "semrep = t[0].label()['SEM']\n",
@@ -1699,6 +1801,13 @@
     "for bo in cs_semrep.store:\n",
     "    print(bo)  # bind operator"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
